--- a/src/css/pageCss/Profile.css
+++ b/src/css/pageCss/Profile.css
@@ -5,7 +5,7 @@
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
-    background-color:   #DDE1E7;
+    /* background-color:   #DDE1E7; */
     overflow-y: scroll;
 }
 .backgroundImage{
