--- a/src/css/pageCss/Search.css
+++ b/src/css/pageCss/Search.css
@@ -3,29 +3,39 @@
     padding: 0;
 }
 .searchBox{
-    width: 100%;
-    height: 100%;
+    width: 30%;
+    height: 90%;
     /* background-color: red; */
     display: flex;
     align-items: center;
     flex-direction: column;
     /* overflow-y:hidden ; */
 }
+.userSearch{
+    all: unset;
+    width: 90%;
+    height: 30px;
+    padding: 10px;
+    /* border-radius: 20px; */
+    border-bottom: 2px solid rgb(50, 42, 40);
+}
 .userBox{
-    width: 50%;
+    width: 100%;
     height: 15%;
     /* display: grid;
     grid-template-columns: 20% 20%;
     grid-template-rows: 100px; */
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 10%;
     /* justify-content: space-eve; */
 
     /* overflow: hidden; */
     /* background-color: gray; */
-    box-shadow:  5px 5px 10px #8f8f8f,
-    inset -5px -5px 10px #ffffff;
+    /* box-shadow:  5px 5px 10px #8f8f8f,
+    inset -5px -5px 10px #ffffff; */
+    /* border-bottom: 2px solid rgba(0, 0, 0, 0.126); */
     margin:10px;
 
 }
@@ -34,25 +44,26 @@
     
     width: 50%;
     height: 100%;
-    margin-left: 18%;
+    /* margin-left: 18%; */
 
     display: flex;
     align-items: center;
     gap: 10%;
 }
 .userCred > img{
-    width: 25%;
-    height: 90%;
+    width: 20%;
+    height: 50%;
     object-fit: contain ;
     border-radius: 50%;
-    background-color: rgba(0, 0, 0, 0.238);
+    background-color: rgba(113, 125, 141, 0.238);
 }
 .userBox:hover{
     background-color: rgba(143, 233, 249, 0.604);
 }
+
 .followButton{
     all: unset;
-    padding: 5px;
+    padding: 2px;
     background-color:  rgb(0, 174, 255);
     cursor: pointer;
    
