--- a/src/css/pageCss/Search.css
+++ b/src/css/pageCss/Search.css
@@ -68,3 +68,96 @@
     cursor: pointer;
    
 }
+
+.searchedUser{
+    width: 95%;
+    height: 95vh;
+    position: absolute;
+    left: 2.5%;
+    top: 2.5vh;
+    overflow-x: hidden;
+    background-color: rgba(194, 237, 247, 0.451);
+    /* background-color: rgba(179, 236, 236, 0.408); */
+    /* background-color: rgba(124, 124, 229, 0.147); */
+    /* background: linear-gradient(to bottom,rgba(124, 124, 229, 0.308) 30%,#031837 30%); */
+    backdrop-filter: blur(5px);
+    border-radius: 20px;
+}
+.searchProfile{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    /* background-color:   #DDE1E7; */
+    overflow-y: scroll;
+}
+.searchUserBackgroundImage{
+    margin-top: 10px;
+    width: 90%;
+    height:45%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow:  5px 5px 10px #8f8f8f,
+    -5px -5px 10px #ffffff;
+}
+.searchUserBackgroundImage>img{
+    width: 95%;
+    height: 90%;
+    object-fit: cover;
+}
+.searchUserProfileContainer{
+    width: 80%;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: -5rem;
+    border-radius: 20px;
+    box-shadow:  5px 5px 10px #8f8f8f,
+             -5px -5px 10px #ffffff;
+    backdrop-filter: blur(2px);
+}
+.searchUserTopData{
+    width: 90%;
+    height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* background-color: red; */
+}
+.searchUserProfileImg{
+    width:  15%;
+    height: 150px;
+    background-size: cover;
+    border-radius: 50%;
+    border: 5px solid rgba(255, 255, 255, 0.773);
+   overflow: hidden;
+    margin-top: -8rem;
+}
+.searchUserProfileImg > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+ 
+}
+
+.topData > button{
+    border-radius: 20px;
+    width: 11%;
+    padding: 12px;
+    box-shadow:  5px 5px 10px #afafaf,
+    -5px -5px 10px #ffffff;
+    background: transparent;
+    border:2px solid rgba(255, 255, 255, 0.337);
+}
+#con::after{
+    content:attr(con-count);
+    background-color: red;
+    border-radius: 50%;
+    padding: 2px;
+    position: relative;
+    bottom: 10px;
+}
