--- a/src/css/componentCss/PostCard.css
+++ b/src/css/componentCss/PostCard.css
@@ -22,11 +22,13 @@
     gap: 5%;
     align-items: center;
     padding: 2% 5% 2% 5%;
+    overflow: hidden;
    
 }
 .userDetails img{
-    height:100%;
+    /* height:100%; */
     width: 50px;
+    aspect-ratio: 1/1;
     border-radius: 50%;
 }
 .userPost{
@@ -66,3 +68,13 @@
     justify-content: space-around;
     background-color: white;
 }
+@media (max-width:1000px) {
+    .postCard{
+        width: 65%;
+    }
+  }
+  @media (max-width:850px) {
+    .postCard{
+        width: clamp(200px,90%,400px);
+    }
+  }
