--- a/src/css/componentCss/PostCard.css
+++ b/src/css/componentCss/PostCard.css
@@ -1,6 +1,6 @@
 .postCard{
-    width: 60%;
-    height: 80%;
+    width: 50%;
+    height: 90%;
     margin: 10px;
     /* background-color: rgba(220, 219, 219, 0.548); */
     background-color: white;
@@ -8,9 +8,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    box-shadow:  5px 5px 10px #8f8f8f,
-    -5px -5px 10px #ffffff;
-    border-radius: 20px;
+    /* margin-: 20px; */
+    /* box-shadow:  5px 5px 10px #bebdbd,
+    -5px -5px 10px #ffffff; */
+    box-shadow: 0 0 2px #c0bebe;
+    border-radius: 2px;
+    scroll-snap-align: center;
+    margin-bottom: 20px;
 
 }
 .userDetails
