--- a/src/css/pageCss/GlobalChat.css
+++ b/src/css/pageCss/GlobalChat.css
@@ -1,3 +1,47 @@
+.globalChatContainer{
+    width: 100%;
+    height: 100%;
+ 
+}
+.globalChats{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+.Allchats{
+    width: 100%;
+    height: 90%;
+}
+.typeChat{
+    width:100%;
+    height: clamp(40px,10%,80px);
+    display: flex;
+    justify-content: center;
+}
+.typeChat textarea{
+    all: unset;
+    background-color: aliceblue;
+    width: 60%;
+height: 80%;
+
+    padding-left: 1%;
+    border-top-left-radius: 20px;
+border-bottom-left-radius: 20px;
+    resize: none;
+}
+.typeChat button{
+all: unset;
+width: 5%;
+cursor: pointer;
+height: 80%;
+border-top-right-radius: 20px;
+border-bottom-right-radius: 20px;
+background-color: beige;
+text-align: center;
+}
 .newUser{
     position: absolute;
     width: 10%;
@@ -5,12 +49,12 @@
     aspect-ratio: 1/1;
     bottom: -20px;
     right: 10px;
-    animation: animateNewUser 1.5s linear;
+    animation: animateNewUser 1.5s linear forwards;
 
 }
 .newUser img{
-    width: 50%;
-    height: 50%;
+    width: 20%;
+    height: 20%;
     object-fit: cover;
     border-radius: 50%;
     
@@ -19,9 +63,11 @@
     0%{
         bottom: -20px;
         right: 10px;
+        display: block;
     }
     100%{
         bottom: 50px;
         right: 20px;
+        display: none;
     }
 }
