--- a/src/css/pageCss/Home.css
+++ b/src/css/pageCss/Home.css
@@ -9,43 +9,51 @@
      display: flex;
      align-items: center;
      justify-content: space-evenly;
+     flex-direction: column;
      /* background-color:   #DDE1E7; */
      
 }
 
+.allPostsContainer{
+  width: 100%;
+  height: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
 .allPosts{
     overflow-y: scroll;
     overflow-x: hidden;
- width: 60%;
- height: 95%;
+ width: 80%;
+ height: 90%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
+ scroll-snap-type: y mandatory;
  /* box-shadow:  5px 5px 10px #8f8f8f,
  -5px -5px 10px #ffffff; */
- /* border: 10px solid transparent; */
- 
 }
 .allPosts::-webkit-scrollbar {
-    width: 2px;
+    width: 0px;
   }
-  .allPosts::-webkit-scrollbar-track {
+  /* .allPosts::-webkit-scrollbar-track {
     background: rgba(168, 168, 168, 0.456);
   }
   ::-webkit-scrollbar-thumb {
     background: #000000;
-  }
+  } */
   
   /* Handle on hover */
   .allPosts::-webkit-scrollbar-thumb:hover {
     background: red;
   }
 .stories{
-    width: 90%;
-    height: 15%;
-    background-color: #8f8f8f;
-    position:relative fixed;
+    width: 40%;
+    height: 100%;
+    background-color: #c6c6c6;
+   
     top: 0px;
     z-index: 1;
     position: sticky;
