--- a/src/css/componentCss/PostCard.css
+++ b/src/css/componentCss/PostCard.css
@@ -82,3 +82,34 @@
         width: clamp(200px,90%,400px);
     }
   }
+  .heart {
+    font-size:50px;
+    width: 50px;
+    height: 50px;
+    background-size: cover;
+    /* animation: heartBeat 1s infinite; */
+    opacity: 0; /* Initially hidden */
+    position: relative;
+    bottom: 50%;
+    left: -3%;
+    transition: opacity 0.5s ease-in-out; /* Smooth transition for opacity */
+  }
+
+  @keyframes heartBeat {
+    0% {
+      transform: scale(1) translateY(0);
+      opacity: 1;
+    }
+    10% {
+      transform: scale(1.3) translateY(-20px);
+    }
+    20% {
+      transform: scale(1) translateY(0);
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+
+ 
