--- a/src/css/componentCss/PostCard.css
+++ b/src/css/componentCss/PostCard.css
@@ -56,6 +56,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    position: relative;
  
 }
 .userPost  img{
@@ -72,6 +73,9 @@
     justify-content: space-around;
     background-color: white;
 }
+.likeComment button{
+  all:unset;
+}
 @media (max-width:1000px) {
     .postCard{
         width: 65%;
@@ -84,29 +88,31 @@
   }
   .heart {
     font-size:50px;
-    width: 50px;
-    height: 50px;
     background-size: cover;
     /* animation: heartBeat 1s infinite; */
-    opacity: 0; /* Initially hidden */
-    position: relative;
-    bottom: 50%;
-    left: -3%;
-    transition: opacity 0.5s ease-in-out; /* Smooth transition for opacity */
+    opacity: 0; 
+    position: absolute;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    transition: opacity 0.4s ease-in-out; /* Smooth transition for opacity */
+    cursor:default;
   }
 
   @keyframes heartBeat {
     0% {
-      transform: scale(1) translateY(0);
+      /* transform: scale(1) translateY(0); */
+      top: 50%;
       opacity: 1;
     }
-    10% {
-      transform: scale(1.3) translateY(-20px);
+    40% {
+      top: 40%;
     }
-    20% {
-      transform: scale(1) translateY(0);
-      opacity: 1;
+    70% {
+      top: 45%;
     }
+  
     100% {
       opacity: 0;
     }
