--- a/src/css/componentCss/Navbar.css
+++ b/src/css/componentCss/Navbar.css
@@ -3,28 +3,56 @@
     padding: 0;
 }
 nav{
-    width: 5%;
+    width: 10%;
     height: 100%;
     /* background-color: rgb(91, 3, 111); */
-    /* background-color:   #DDE1E7; */
-    /* border-right: 2px solid white; */
-    /* box-shadow: inset -3px -3px 8px #fffffff1,  
-    inset 3px 3px 15px rgba(94, 104, 121, 0.692); */
-    /* border-radius: 20px; */
-    box-shadow:  5px 5px 10px #8f8f8f,
-            inset -5px -5px 10px #ffffff;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+
 
 }
-.navMenu{
+.toggler{
     width: 90%;
-    height: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+.toggler svg{
+    cursor: pointer;
+}
+/* nav::before{
+    content: "";
+    background: url("../../components/logo.jpeg");
+    width: 8vw;
+    height: 6%;
+    margin-top: 1%;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family:fantasy;
+    position: absolute;
+} */
+#navMenu{
+    width: 90%;
+    height: 90%;
+    background: #ffffff;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items:center;
+    overflow: hidden;
+    transition: all ease 0.2s;
     
 }
-.navMenu a{
+#navMenu a{
     all: unset;
     cursor: pointer;
     width: auto;
@@ -44,23 +72,26 @@ nav{
     border-radius: 2%;
 
     } */
-    .navMenu a img{
-        width: 30px;
-        height: 30px;  
-    border-radius: 50%;
+    #navMenu a svg{
+        font-size: 22px;
+        color: #7a7a7a;
+    /* background-color: red; */
         /* background: transparent; */
         /* mix-blend-mode:luminosity; */
 
 
     }
 @media (max-width:1000px) {
-
+    .toggler{
+display: none;
+}
    nav{
     width: 100%;
     height: 10%;
    }
-   .navMenu{
+   #navMenu{
     width: 100%;
     flex-direction: row;
+    box-shadow: 0px -10px 10px rgba(216, 216, 216, 0.212);
    }
     }
