--- a/src/css/componentCss/NotificationBox.css
+++ b/src/css/componentCss/NotificationBox.css
@@ -4,30 +4,45 @@
 }
 .notification {
     position: absolute;
-    background-color:rgba(253, 253, 253, 0.779);
-    backdrop-filter: blur(10px);
+    /* background-color:rgba(253, 253, 253, 0.952); */
+    backdrop-filter: blur(20px);
      box-shadow:  5px 5px 10px #8f8f8f,
  -5px -5px 10px #ffffff;
+ border: 10px solid transparent;
     top: 8%;
     right: 10%;
     width: clamp(250px,30%,500px);
     /* height: 75vh; */
     aspect-ratio: 1/1;
     padding-top: 2vh;
+    padding-bottom: 2vh;
     overflow-y: scroll;
     z-index: 2;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+.notification::-webkit-scrollbar{
+    width: 3px;
+    /* background-color: aqua; */
+}
+.notification::-webkit-scrollbar-thumb{
+    width: 2px;
+    background-color: rgb(73, 73, 73);
+}
+
 .notificationBox{
     width: 95%;
     height: 50px;
-    background-color: rgba(169, 221, 255, 0.744);
+    /* background-color: rgba(105, 127, 130, 0.715); */
+    background-color: whitesmoke;
+    /* color: white; */
     display: flex;
     justify-content: center;
     align-items: center;
-    border-bottom: 1px solid rgb(53, 174, 255);
+    border: 1px solid rgba(54, 54, 54, 0.142);
+    flex-shrink: 0;
+    margin-bottom: 2px;
 }
 .notification a{
     all: unset;
