--- a/src/css/pageCss/Home.css
+++ b/src/css/pageCss/Home.css
@@ -23,9 +23,11 @@
 
 }
 .allPosts{
+  /* background-color: aqua; */
     overflow-y: scroll;
     overflow-x: hidden;
- width: 80%;
+ width: 60%;
+ padding: 0 10%;
  height: 90%;
  display: flex;
  align-items: center;
@@ -57,6 +59,7 @@
     top: 0px;
     z-index: 1;
     position: sticky;
+    display: none;
 }
 
 @media (max-width:1000px) {
@@ -68,11 +71,13 @@
 @media (max-width:850px){
   .allPosts{
     width: 90%;
+    padding: 0;
   }
 }
 @media (max-width:380px) {
   .allPosts{
       width: 100%;
+      padding: 0;
       /* background-color: red; */
   }
 }
